harness/test/errors/082_array_reshape_mismatch.eu
# Reshape to incompatible shape
a: arr.from-flat([2, 2], [1, 2, 3, 4]) arr.reshape([5])
